--- a/static/css/app.css
+++ b/static/css/app.css
@@ -23,7 +23,7 @@ body{
     margin: 50px;
     background: white radial-gradient(black 2px, transparent 0);
     background-size: 40px 40px;
-    background-position: -20px -20px;
+    background-position: 0 0;
     border-radius: 8px;
     position: relative;
     overflow: hidden;
