--- a/static/css/base.css
+++ b/static/css/base.css
@@ -90,3 +90,49 @@ nav#nav{
     color: red;
     cursor: pointer;
 }
+
+/* Surprisingly W3Schools actually gets the job done pretty well*/
+
+.snackbar {
+    min-width: 250px; /* Set a default minimum width */
+    margin-left: -125px; /* Divide value of min-width by 2 */
+    background-color: #333; /* Black background color */
+    color: #fff; /* White text color */
+    text-align: center; /* Centered text */
+    border-radius: 2px; /* Rounded borders */
+    padding: 16px; /* Padding */
+    position: fixed; /* Sit on top of the screen */
+    z-index: 1; /* Add a z-index if needed */
+    right: 10px; /* Center the snackbar */
+    top: 130px; /* 30px from the bottom */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    cursor: pointer;
+    user-select: none;
+    transition: 0.2s;
+}
+
+.snackbar:hover{
+    opacity: 0.8;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+    from {top: 160px; opacity: 0;}
+    to {top: 130px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {top: 160px; opacity: 0;}
+    to {top: 130px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {top: 130px; opacity: 1;}
+    to {top: 160px; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {top: 130px; opacity: 1;}
+    to {top: 160px; opacity: 0;}
+}
