--- a/templates/app.html
+++ b/templates/app.html
@@ -7,7 +7,12 @@
             <div id="workspace__users"></div>
         </div>
         <div id="workspace">
-            <div class="container t-chart">
+
+        </div>
+    </div>
+
+    <template id="template__tchart">
+    <div class="container t-chart">
                 <div class="container-group" style="order: 1;">
                     <div class="container-group-header">Interlake High School</div>
                     <div class="container-group-content">
@@ -72,9 +77,7 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-    </div>
+    </template>
 
     <template id="template__user">
         <div class="workspace__wrapper_user" data-name="andrew">
