--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,11 @@
         <div id="nav__logo">
             Notetaker
         </div>
+        <div id="nav__right">
+            <div><a href="/dashboard">Dashboard</a></div>
+            <div><a href="/login">Login</a></div>
+            <div><a href="/signup">Signup</a></div>
+        </div>
     </nav>
     {% block content %}{% endblock %}
 
