--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div id="wrapper">
-        <form id="signup" method="post" action="/api/login">
+        <form id="signup" method="post" action="/api/signup">
             <h1>Sign up for Notetaker</h1>
             <label for="username">
                 Username
