Add elements (still unsaved)

--- a/templates/app.html
+++ b/templates/app.html
@@ -3,7 +3,12 @@
 
     <div id="workspace__wrapper">
         <div id="workspace__header">
-            <input value="Sample Test" id="workspace__name">
+            <div class="left">
+                <input value="Sample Test" id="workspace__name">
+                <button id="addnote">Add Note</button>
+                <button id="addgroup">Add Group</button>
+                <button id="addcomparison">Add Comparison</button>
+            </div>
             <div id="workspace__users"></div>
         </div>
         <div id="workspace">
