--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,6 +102,12 @@ nav#nav{
     cursor: pointer;
 }
 
+.modal input{
+    width: 100%;
+    padding: 10px;
+    margin-top: 20px;
+}
+
 .modal .close{
     color: red;
     cursor: pointer;
@@ -130,6 +136,15 @@ nav#nav{
 
 .snackbar:hover{
     opacity: 0.8;
+}
+
+.left button{
+    background: var(--light-background);
+    padding: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    border: none;
+    margin: 0 5px;
 }
 
 /* Animations to fade the snackbar in and out */
