--- a/templates/app.html
+++ b/templates/app.html
@@ -4,7 +4,7 @@
     <div id="workspace__wrapper">
         <div id="workspace__header">
             <div class="left">
-                <input value="Sample Test" id="workspace__name">
+                <input value="" id="workspace__name">
                 <button id="addnote">Add Note</button>
                 <button id="addgroup">Add Group</button>
                 <button id="addcomparison">Add Comparison</button>
